# ai_engineer_interview_2025

./: .env.sample  README.md  pyproject.toml
.github/workflows/: ci.yml
sample_documents/: project_report.docx  technical_guide.md
scripts/: ask_question.py  upload_documents.py
src/doctalk/: models.py
src/doctalk/agents/: __init__.py  rag_agent.py
src/doctalk/embedding/: __init__.py  manager.py
src/doctalk/pipeline/: __init__.py  ingestion.py
src/doctalk/storage/: __init__.py  manager.py
