[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-engineer-interview-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.15.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doctalk"]

[tool.ruff]
line-length = 120
